--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Understanding Games</title>
+</head>
+<body>
+
+  <h1>Understanding Games</h1>
+  <h2>Just what makes a game, giving it the life that inspires us to play them?</h2>
+
+</body>
+</html>
+
 
