--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <title>Understanding Games</title>
+  <style>
+    body {
+      background: rgb(230, 230, 230);
+    }
+  </style>
 </head>
 <body>
 
@@ -11,5 +16,3 @@
 
 </body>
 </html>
-
-
