--- a/index.html
+++ b/index.html
@@ -7,12 +7,36 @@
     body {
       background: rgb(230, 230, 230);
     }
+
+    .image-row {
+      display: flex;
+      gap: 1rem;
+      margin-top: 1rem;
+    }
+
+    .image-row img {
+      height: 150px;
+      object-fit: cover;
+    }
   </style>
 </head>
 <body>
 
   <h1>Understanding Games</h1>
   <h2>Just what makes a game, giving it the life that inspires us to play them?</h2>
+
+  <p>
+    We play many games throughout our lives, bringing a spark of fun to our day, but what gives them this appeal?
+    Games play deeply off of our very human natures, and their definition is not quite as simple as it might first seem.
+    We have board games, card games, video games, and sports, but what do they all have in common that makes them what they are?
+  </p>
+
+  <div class="image-row">
+    <img src="Images/videoGame.png" alt="Video Game">
+    <img src="Images/cardGame.png" alt="Card Game">
+    <img src="Images/sportsGame.png" alt="Sports Game">
+    <img src="Images/boardGame.png" alt="Board Game">
+  </div>
 
 </body>
 </html>
