--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Understanding Games</title>
   <style>
     body {
-      background: rgb(0, 250, 0);
+      background: rgb(0,250,0);
     }
 
     .image-row {
@@ -37,6 +37,15 @@
     <img src="Images/sportsGame.png" alt="Sports Game">
     <img src="Images/boardGame.png" alt="Board Game">
   </div>
+
+  <p>
+    <a href="https://en.wikipedia.org/wiki/Game">Wikipedia</a> defines a game as a structured play often undertaken for entertainment or fun.
+    <a href="https://getcreativetoday.com/define-game/">Getcreativetoday</a> notes that games all have a goal and change according to player interaction following certain rules.
+    So that's what a game is. But why?
+    <a href="https://www.idtech.com/blog/what-makes-video-games-fun">ID Tech</a> phrases it quite well like this:
+    “games allow players to take on the role of someone new and different, in worlds they’d never have the chance to explore,
+    in situations beyond what the mind could ever fathom.”
+  </p>
 
 </body>
 </html>
