--- a/index.html
+++ b/index.html
@@ -1,54 +1,37 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Understanding Games</title>
-  <style>
-    body {
-      background: rgb(0,250,0);
-    }
+<p>
+  The human mind wants to have a purpose. It wants to achieve through work. Games help meet that desire. 
+  The set goal gives the person a purpose. Where a person might otherwise be bored, it provides a challenge 
+  to work on. Whether through luck, skill, or strategy, a good game requires the players to put effort into it. 
+  A person wants to win, but we also want to earn it. The work put into a game makes achieving the goal more 
+  valuable to the player.
+</p>
 
-    .image-row {
-      display: flex;
-      gap: 1rem;
-      margin-top: 1rem;
-    }
+<p>
+  Some might ask, "Why make up a problem when you can be productive and solve real ones?" And it's a real 
+  question. Why should we waste time creating problems instead of trying to solve existing ones? First, I would 
+  argue that to play a game is not necessarily unproductive. Games train your mind, and in the case of sports, 
+  your body as well, to think and perform on a higher level. It gives you a problem you can handle, and your 
+  muscles, whether mental or physical, practice finding ways to solve it. Games can improve memory, fitness, 
+  and quick thinking.
+</p>
 
-    .image-row img {
-      height: 150px;
-      object-fit: cover;
-    }
-  </style>
-</head>
-<body>
+<p>
+  Problems in real life can be overwhelming, and sometimes we just want to escape. Games give us that escape 
+  and give us smaller problems to handle. There is a reason no game is perfectly like life. Yes, technology 
+  still limits us so that it is not yet fully possible. But imagine a game that was just like life. You have to 
+  eat, work, go to school, and every menial, dry task we face in real life. Would you play it? Why not? It's 
+  because a game is an escape. Games put a twist on reality with a new set of rules. They let us use our 
+  imagination to go beyond the confines of reality. In games, we are not living our own life — but escaping 
+  to another world.
+</p>
 
-  <h1>Understanding Games</h1>
-  <h2>Just what makes a game, giving it the life that inspires us to play them?</h2>
-
-  <p>
-    We play many games throughout our lives, bringing a spark of fun to our day, but what gives them this appeal?
-    Games play deeply off of our very human natures, and their definition is not quite as simple as it might first seem.
-    We have board games, card games, video games, and sports, but what do they all have in common that makes them what they are?
-  </p>
-
-  <div class="image-row">
-    <img src="Images/videoGame.png" alt="Video Game">
-    <img src="Images/cardGame.png" alt="Card Game">
-    <img src="Images/sportsGame.png" alt="Sports Game">
-    <img src="Images/boardGame.png" alt="Board Game">
-  </div>
-
-  <p>
-    <a href="https://en.wikipedia.org/wiki/Game">Wikipedia</a> defines a game as a structured play often undertaken for entertainment or fun.
-    <a href="https://getcreativetoday.com/define-game/">Getcreativetoday</a> notes that games all have a goal and change according to player interaction following certain rules.
-    So that's what a game is. But why?
-    <a href="https://www.idtech.com/blog/what-makes-video-games-fun">ID Tech</a> phrases it quite well like this:
-    “games allow players to take on the role of someone new and different, in worlds they’d never have the chance to explore,
-    in situations beyond what the mind could ever fathom.”
-  </p>
-
-</body>
-</html>
+<p>
+  A game is an activity for entertainment. But it is so much more as well. A good game is one where you can 
+  immerse yourself in with a goal away from the problems of life, challenging yourself in a more direct, 
+  immediate, and attainable manner than normal life provides. In turn, the game becomes both an escape and 
+  a mental and/or physical training ground. It offers our minds a break from a tough world, keeps us sharp, 
+  and then lets us return back to our lives with a new vigor, ready to face the challenges in real life.
+</p>
 
 
 
