--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Understanding Games</title>
+  <title>A World of Games</title>
   <style>
     body {
       background: rgb(0,250,0);
@@ -22,13 +22,15 @@
 </head>
 <body>
 
-  <h1>Understanding Games</h1>
+  <h1>A World of Games</h1>
   <h2>Just what makes a game, giving it the life that inspires us to play them?</h2>
 
   <p>
-    We play many games throughout our lives, bringing a spark of fun to our day, but what gives them this appeal?
+    We play many games throughout our lives, bringing a spark of fun to our day, but have you ever wondered just what they are?
+    Is it a just a way to test ourselves? Is it purely for entertainment? Or... is it something more?
     Games play deeply off of our very human natures, and their definition is not quite as simple as it might first seem.
-    We have board games, card games, video games, and sports, but what do they all have in common that makes them what they are?
+    We have board games, card games, video games, and sports. Even life itself is a often called a game. The most dangerous
+    game. So what do they all have in common that makes them what they are?
   </p>
 
   <div class="image-row">
@@ -48,6 +50,9 @@
   </p>
 
   <p>
+    To best understand games, let's first take a brief look at how people function and the games we play
+    within this overall, greater \"game\" of life.
+    
     The human mind wants to have a purpose. It wants to achieve through work. Games help meet that desire.
     The set goal gives the person a purpose. Where a person might otherwise be bored, it provides a challenge to work on.
     Whether through luck, skill, or strategy, a good game requires the players to put effort into it.
