--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     Is it a just a way to test ourselves? Is it purely for entertainment? Or... is it something more?
     Games play deeply off of our very human natures, and their definition is not quite as simple as it might first seem.
     We have board games, card games, video games, and sports. Even life itself is a often called a game. The most dangerous
-    game. So what do they all have in common that makes them what they are?
+    game. So what do they all have in common that makes them what they are? And what does it mean for us, as participants
+    in these games, and ultimately, the Game of Life?
   </p>
 
   <div class="image-row">
@@ -51,7 +52,7 @@
 
   <p>
     To best understand games, let's first take a brief look at how people function and the games we play
-    within this overall, greater \"game\" of life.
+    within this overall, greater "game" of life.
     
     The human mind wants to have a purpose. It wants to achieve through work. Games help meet that desire.
     The set goal gives the person a purpose. Where a person might otherwise be bored, it provides a challenge to work on.
@@ -73,15 +74,40 @@
     But imagine a game that was just like life. You have to eat, work, go to school, and every menial, dry task we face in real life.
     Would you play it? Why not? It's because a game is an escape. Games put a twist on reality with a new set of rules.
     They let us use our imagination to go beyond the confines of reality. In games, we are not living our own life — but escaping to another world.
-  </p>
 
-  <p>
     A game is an activity for entertainment. It is also an escape. But it is so much more as well.
     A good game is one where you can immerse yourself in with a goal away from the problems of this world,
     challenging yourself in a more direct, immediate, and attainable manner than normal life provides.
     In turn, the game becomes both an escape and a mental and/or physical training ground.
     It offers our minds a break from a tough world, keeps us sharp, and then lets us return back to our lives with a new vigor,
     ready to face the challenges in real life.
+  </p>
+
+  <p>
+    Returning back to the original, question, what does this mean games are as a whole,
+    and what does it mean for us as players?
+    The answer is this: A game is a world of its own, with set rules defining it.
+    It is a challenge that drives us to push harder.
+    Sometimes it is fun. Other times it is simply a task before us in which we
+    strive to complete and conquer. And while it may not appear so at first,
+    when you view it as such, life itself is no different than any
+    other game. We have clear boundaries of science and logic, set by God
+    in which we must abide. We have a purpose and a goal, and that is to
+    spread thw Word and glorify God. It is no easy task, but one that
+    takes a lifetime of fighting. Sometimes it is happy. OFten, it
+    brings hardships. But like any good game, it also has a way to
+    win, and a the victory is worth fighting for. As Paul in the Bible phrased
+    it, it is a race worth running. The game of life is
+    bigger than any other game, with more rules and strategy than our
+    minds will ever comprehend. But we're all in this game, and we've
+    been given the resources we need to win. We have no choice but to play.
+    It's merely a matter of question as to how we decide to play.
+    Many will lose, and the path to victory is narrow. But with a mind set
+    on the goal ahead, Christ, we
+    can reach victory, even in the toughest game of them all. That, is
+    what it means to play, to live life. Keep your mind set on the
+    goal. Victory is at hand, and with Christ by our side, we play
+    to win.
   </p>
 
 </body>
