--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>A World of Games</title>
+  <title>The Game of Life</title>
   <style>
     body {
       background: rgb(0,250,0);
@@ -22,7 +22,7 @@
 </head>
 <body>
 
-  <h1>A World of Games</h1>
+  <h1>The Game of Life</h1>
   <h2>Just what makes a game, giving it the life that inspires us to play them?</h2>
 
   <p>
