--- a/index.html
+++ b/index.html
@@ -93,21 +93,21 @@
     when you view it as such, life itself is no different than any
     other game. We have clear boundaries of science and logic, set by God
     in which we must abide. We have a purpose and a goal, and that is to
-    spread thw Word and glorify God. It is no easy task, but one that
-    takes a lifetime of fighting. Sometimes it is happy. OFten, it
+    spread the Word and glorify God. It is no easy task, but one that
+    takes a lifetime of fighting. Sometimes it is happy. Often, it
     brings hardships. But like any good game, it also has a way to
-    win, and a the victory is worth fighting for. As Paul in the Bible phrased
+    win, and the prize is worth fighting for. As Paul in the Bible phrased
     it, it is a race worth running. The game of life is
     bigger than any other game, with more rules and strategy than our
     minds will ever comprehend. But we're all in this game, and we've
     been given the resources we need to win. We have no choice but to play.
     It's merely a matter of question as to how we decide to play.
-    Many will lose, and the path to victory is narrow. But with a mind set
-    on the goal ahead, Christ, we
-    can reach victory, even in the toughest game of them all. That, is
-    what it means to play, to live life. Keep your mind set on the
-    goal. Victory is at hand, and with Christ by our side, we play
-    to win.
+    That, is
+    what it means to play, to live life. 
+    Many will lose, and the path to victory is narrow.
+    Be careful to keep your mind set on the
+    goal, Christ, the Life Everlasting. Victory is at hand, and with Christ by our side...
+    we play to win. Losing the game of life is not option.
   </p>
 
 </body>
