--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 
   <h1>The Game of Life</h1>
-  <h2>Just what makes a game, giving it the life that inspires us to play them?</h2>
+  <h2>Just what does it mean to be a particpant in this ultimate challenge?</h2>
 
   <p>
     We play many games throughout our lives, bringing a spark of fun to our day, but have you ever wondered just what they are?
