--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
   <style>
     body {
       background: rgb(0,250,0);
+      display: flex;
+      justify-content: center;
+    }
+
+    .main {
+      max-width: 700px;
+      padding: 1rem;
+    }
+
+    p {
+      line-height: 1.6;
+      margin-bottom: 1.2rem;
     }
 
     .image-row {
@@ -22,13 +34,90 @@
 </head>
 <body>
 
-  <h1>The Game of Life</h1>
-  <h2>Just what does it mean to be a participant in this ultimate challenge?</h2>
+  <div class="main">
 
-  <p>
-    <a href="page2.html">Images and Definitions</a> |
-    <a href="page3.html">The Meaning Behind Games</a>
-  </p>
+    <h1>The Game of Life</h1>
+    <h2>Just what does it mean to be a participant in this ultimate challenge?</h2>
+
+    <p>
+      We play many games throughout our lives, bringing a spark of fun to our day, but have you ever wondered just what they are?
+      Is it a just a way to test ourselves? Is it purely for entertainment? Or... is it something more?
+      Games play deeply off of our very human natures, and their definition is not quite as simple as it might first seem.
+      We have board games, card games, video games, and sports. Even life itself is often called a game. The most dangerous
+      game. So what do they all have in common that makes them what they are? And what does it mean for us, as participants
+      in these games, and ultimately, the Game of Life?
+    </p>
+
+    <div class="image-row">
+      <img src="Images/videoGame.png" alt="Video Game">
+      <img src="Images/cardGame.png" alt="Card Game">
+      <img src="Images/sportsGame.png" alt="Sports Game">
+      <img src="Images/boardGame.png" alt="Board Game">
+    </div>
+
+    <p>
+      <a href="https://en.wikipedia.org/wiki/Game">Wikipedia</a> defines a game as a structured play often undertaken for entertainment or fun.
+      <a href="https://getcreativetoday.com/define-game/">Getcreativetoday</a> notes that games all have a goal and change according to player interaction following certain rules.
+      So that's what a game is. But why?
+      <a href="https://www.idtech.com/blog/what-makes-video-games-fun">ID Tech</a> phrases it quite well like this:
+      “games allow players to take on the role of someone new and different, in worlds they’d never have the chance to explore,
+      in situations beyond what the mind could ever fathom.”
+    </p>
+
+    <p>
+      To best understand games, let's first take a brief look at how people function and the games we play
+      within this overall, greater "game" of life.
+      The human mind wants to have a purpose. It wants to achieve through work. Games help meet that desire.
+      The set goal gives the person a purpose. Where a person might otherwise be bored, it provides a challenge to work on.
+      Whether through luck, skill, or strategy, a good game requires the players to put effort into it.
+      A person wants to win, but we also want to earn it. The work put into a game makes achieving the goal more valuable to the player.
+    </p>
+
+    <p>
+      Some might ask, "Why make up a problem when you can be productive and solve real ones?" And it's a real question.
+      Why should we waste time creating problems instead of trying to solve existing ones? Games train your mind,
+      and in the case of sports, your body as well, to think and perform on a higher level.
+      Games can improve memory, fitness, and quick thinking.
+    </p>
+
+    <p>
+      Problems in real life can be overwhelming, and sometimes we just want to escape. Games give us that escape and give us smaller problems to handle.
+      There is a reason no game is perfectly like life. Yes, technology still limits us so that it is not yet fully possible.
+      But imagine a game that was just like life. You have to eat, work, go to school, and every menial, dry task we face in real life.
+      Would you play it? Why not? It's because a game is an escape. Games put a twist on reality with a new set of rules.
+      They let us use our imagination to go beyond the confines of reality. In games, we are not living our own life — but escaping to another world.
+    </p>
+
+    <p>
+      A game is an activity for entertainment. It is also an escape. But it is so much more as well.
+      A good game is one where you can immerse yourself in with a goal away from the problems of this world,
+      challenging yourself in a more direct, immediate, and attainable manner than normal life provides.
+      In turn, the game becomes both an escape and a mental and/or physical training ground.
+      It offers our minds a break from a tough world, keeps us sharp, and then lets us return back to our lives with a new vigor,
+      ready to face the challenges in real life.
+    </p>
+
+    <p>
+      Returning back to the original question, what does this mean games are as a whole,
+      and what does it mean for us as players?
+      A game is a world of its own, with set rules defining it.
+      It is a challenge that drives us to push harder.
+      Sometimes it is fun. Other times it is simply a task before us in which we strive to complete and conquer.
+      Life itself mirrors this structure. We have clear boundaries of science and logic, set by God.
+      We have a purpose and a goal: to spread the Word and glorify God.
+      It is no easy task, but one worth a lifetime of effort.
+      With our minds set on Christ, the goal ahead, we play to win.
+      Losing the game of life is not an option.
+    </p>
+
+    <hr>
+
+    <p>
+      <a href="purpose.html">Purpose</a> |
+      <a href="works.html">Works Cited</a>
+    </p>
+
+  </div>
 
 </body>
 </html>
