--- a/page2.html
+++ b/page2.html
@@ -2,53 +2,25 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Images and Definitions</title>
+  <title>Purpose</title>
   <style>
     body {
       background: rgb(0,250,0);
-    }
-
-    .image-row {
       display: flex;
-      gap: 1rem;
-      margin-top: 1rem;
+      justify-content: center;
     }
-
-    .image-row img {
-      height: 150px;
-      object-fit: cover;
+    .main {
+      max-width: 700px;
+      padding: 1rem;
+      line-height: 1.6;
     }
   </style>
 </head>
 <body>
-
-  <p>
-    <a href="index.html">Home</a> |
-    <a href="page3.html">The Meaning Behind Games</a>
-  </p>
-
-  <p>
-    We play many games throughout our lives, bringing a spark of fun to our day, but have you ever wondered just what they are?
-    Is it a just a way to test ourselves? Is it purely for entertainment? Or... is it something more?
-    Games play deeply off of our very human natures, and their definition is not quite as simple as it might first seem.
-    We have board games, card games, video games, and sports. Even life itself is often called a game.
-  </p>
-
-  <div class="image-row">
-    <img src="Images/videoGame.png" alt="Video Game">
-    <img src="Images/cardGame.png" alt="Card Game">
-    <img src="Images/sportsGame.png" alt="Sports Game">
-    <img src="Images/boardGame.png" alt="Board Game">
+  <div class="main">
+    <h2>Purpose</h2>
+    <p>This website was made for Computer Science and Public Speech and Debate.</p>
+    <p><a href="index.html">Back to Main Page</a></p>
   </div>
-
-  <p>
-    <a href="https://en.wikipedia.org/wiki/Game">Wikipedia</a> defines a game as a structured play often undertaken for entertainment or fun.
-    <a href="https://getcreativetoday.com/define-game/">Getcreativetoday</a> notes that games all have a goal and change according to player interaction following certain rules.
-    So that's what a game is. But why?
-    <a href="https://www.idtech.com/blog/what-makes-video-games-fun">ID Tech</a> phrases it quite well like this:
-    “games allow players to take on the role of someone new and different, in worlds they’d never have the chance to explore,
-    in situations beyond what the mind could ever fathom.”
-  </p>
-
 </body>
 </html>
