--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <p>
       We play many games throughout our lives, bringing a spark of fun to our day, but have you ever wondered just what they are?
       Is it a just a way to test ourselves? Is it purely for entertainment? Or... is it something more?
-      Games play deeply off of our very human natures, and their definition is not quite as simple as it might first seem.
+      Games play deeply off of our human nature, and their definition is not quite as simple as it might first seem.
       We have board games, card games, video games, and sports. Even life itself is often called a game. The most dangerous
       game. So what do they all have in common that makes them what they are? And what does it mean for us, as participants
       in these games, and ultimately, the Game of Life?
