--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
       display: flex;
       justify-content: center;
     }
+    #para{color:rgb(1,1,1);}
 
     .main {
       max-width: 700px;
       padding: 1rem;
     }
 
-    p {
+    p { 
       line-height: 1.6;
       margin-bottom: 1.2rem;
     }
@@ -40,7 +41,7 @@
     <h1>The Game of Life</h1>
     <h2>Just what does it mean to be a participant in this ultimate challenge?</h2>
 
-    <p>
+    <p id = "para"> 
       We play many games throughout our lives, bringing a spark of fun to our day, but have you ever wondered just what they are?
       Is it a just a way to test ourselves? Is it purely for entertainment? Or... is it something more?
       Games play deeply off of our human nature, and its definition is not quite as simple as it might first seem.
@@ -56,7 +57,7 @@
       <img src="Images/boardGame.png" alt="Board Game">
     </div>
 
-    <p>
+    <p id = "para"> 
       <a href="https://en.wikipedia.org/wiki/Game">Wikipedia</a> defines a game as a structured play often undertaken for entertainment or fun.
       <a href="https://getcreativetoday.com/define-game/">Getcreativetoday</a> notes that games all have a goal and change according to player interaction following certain rules.
       So that's what a game is. But why?
