Add background color to paragraph in index.html

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <h1>The Game of Life</h1>
     <h2>Just what does it mean to be a participant in this ultimate challenge?</h2>
 
-    <p> 
+    <p style="background-color:rgb(250,0,0);"> 
       We play many games throughout our lives, bringing a spark of fun to our day, but have you ever wondered just what they are?
       Is it a just a way to test ourselves? Is it purely for entertainment? Or... is it something more?
       Games play deeply off of our human nature, and its definition is not quite as simple as it might first seem.
