--- a/purpose.html
+++ b/purpose.html
@@ -13,6 +13,39 @@
       max-width: 700px;
       padding: 1rem;
       line-height: 1.6;
+      color: rgb(0,250,0);
+    }
+    .secret-triangle {
+      position: fixed;
+      right: 20px;
+      top: 40%;
+      width: 0;
+      height: 0;
+      border-left: 80px solid transparent;
+      border-right: 80px solid transparent;
+      border-bottom: 140px solid currentColor;
+      cursor: pointer;
+      transition: 0.3s;
+      color: rgb(0,250,0);
+    }
+    .secret-triangle span {
+      position: absolute;
+      top: 45%;
+      left: 50%;
+      width: 160px;
+      transform: translate(-50%, -50%);
+      text-align: center;
+      font-size: 12px;
+      color: currentColor;
+      transition: 0.3s;
+      pointer-events: none;
+    }
+    .secret-triangle:hover {
+      color: yellow;
+      border-bottom-color: yellow;
+    }
+    .secret-triangle:hover span {
+      color: black;
     }
   </style>
 </head>
@@ -21,6 +54,10 @@
     <h2>Purpose</h2>
     <p>This website was made for Computer Science and Public Speech and Debate.</p>
     <p><a href="index.html">Back to Main Page</a></p>
+  </div>
+
+  <div class="secret-triangle">
+    <span>You found the useless secret text, congratulations!</span>
   </div>
 </body>
 </html>
