Refactor secret triangle into a hitbox element

--- a/purpose.html
+++ b/purpose.html
@@ -15,16 +15,23 @@
       line-height: 1.6;
       color: rgb(0,250,0);
     }
-    .secret-triangle {
+    .secret-hitbox {
       position: fixed;
+      right: 0;
+      top: 30%;
+      width: 200px;
+      height: 250px;
+      cursor: pointer;
+    }
+    .secret-triangle {
+      position: absolute;
       right: 20px;
-      top: 40%;
+      top: 40px;
       width: 0;
       height: 0;
       border-left: 80px solid transparent;
       border-right: 80px solid transparent;
       border-bottom: 140px solid currentColor;
-      cursor: pointer;
       transition: 0.3s;
       color: rgb(0,250,0);
     }
@@ -40,11 +47,11 @@
       transition: 0.3s;
       pointer-events: none;
     }
-    .secret-triangle:hover {
+    .secret-hitbox:hover .secret-triangle {
       color: yellow;
       border-bottom-color: yellow;
     }
-    .secret-triangle:hover span {
+    .secret-hitbox:hover .secret-triangle span {
       color: black;
     }
   </style>
@@ -56,8 +63,11 @@
     <p><a href="index.html">Back to Main Page</a></p>
   </div>
 
-  <div class="secret-triangle">
-    <span>You found the useless secret text, congratulations!</span>
+  <div class="secret-hitbox">
+    <div class="secret-triangle">
+      <span>You found the useless secret text, congratulations!</span>
+    </div>
   </div>
 </body>
 </html>
+
