--- a/purpose.html
+++ b/purpose.html
@@ -31,9 +31,9 @@
       height: 0;
       border-left: 80px solid transparent;
       border-right: 80px solid transparent;
-      border-bottom: 140px solid currentColor;
+      border-bottom: 140px solid yellow;
+      color: yellow;
       transition: 0.3s;
-      color: rgb(0,250,0);
     }
     .secret-triangle span {
       position: absolute;
@@ -43,7 +43,7 @@
       transform: translate(-50%, -50%);
       text-align: center;
       font-size: 12px;
-      color: currentColor;
+      color: black;
       transition: 0.3s;
       pointer-events: none;
     }
@@ -70,4 +70,3 @@
   </div>
 </body>
 </html>
-
