--- a/purpose.html
+++ b/purpose.html
@@ -13,7 +13,6 @@
       max-width: 700px;
       padding: 1rem;
       line-height: 1.6;
-      color: rgb(0,250,0);
     }
     .secret-hitbox {
       position: fixed;
@@ -31,19 +30,19 @@
       height: 0;
       border-left: 80px solid transparent;
       border-right: 80px solid transparent;
-      border-bottom: 140px solid yellow;
-      color: yellow;
+      border-bottom: 140px solid rgb(0,250,0);
+      color: rgb(0,250,0);
       transition: 0.3s;
     }
     .secret-triangle span {
       position: absolute;
-      top: 45%;
+      top: 50%;
       left: 50%;
-      width: 160px;
+      width: 120px;
       transform: translate(-50%, -50%);
       text-align: center;
-      font-size: 12px;
-      color: black;
+      font-size: 10px;
+      color: rgb(0,250,0);
       transition: 0.3s;
       pointer-events: none;
     }
