--- a/works.html
+++ b/works.html
@@ -25,6 +25,13 @@
       padding: 8px 12px;
       cursor: pointer;
     }
+    div {
+      background-color: rgb(0,200,0);
+      width 300px;
+      border: 10px rgb(0,150,0);
+      padding: 50px;
+      margin: 20px;
+    }
   </style>
 </head>
 <body>
