Add hyperlinks to works cited in works.html

--- a/works.html
+++ b/works.html
@@ -39,16 +39,20 @@
     <h2>Works Cited</h2>
 
     <p>
-      Wikipedia. “Game.” https://en.wikipedia.org/wiki/Game
+    Wikipedia. “Game.” 
+    <a href="https://en.wikipedia.org/wiki/Game">https://en.wikipedia.org/wiki/Game</a>
+    </p>
+    
+    <p>
+      GetCreativeToday. “Define Game.” 
+      <a href="https://getcreativetoday.com/define-game/">https://getcreativetoday.com/define-game/</a>
+    </p>
+    
+    <p>
+      ID Tech. “What Makes Video Games Fun?” 
+      <a href="https://www.idtech.com/blog/what-makes-video-games-fun">https://www.idtech.com/blog/what-makes-video-games-fun</a>
     </p>
 
-    <p>
-      GetCreativeToday. “Define Game.” https://getcreativetoday.com/define-game/
-    </p>
-
-    <p>
-      ID Tech. “What Makes Video Games Fun?” https://www.idtech.com/blog/what-makes-video-games-fun
-    </p>
 
     <p><a href="index.html">Back to Main Page</a></p>
 
