--- a/works.html
+++ b/works.html
@@ -28,7 +28,7 @@
     div {
       background-color: rgb(0,200,0);
       width: 300px;
-      border: 20px rgb(0,100,250);
+      border: 20px solid rgb(0,100,250);
       padding: 50px;
       margin: 20px;
     }
