Add opacity to the style in works.html

--- a/works.html
+++ b/works.html
@@ -31,6 +31,7 @@
       border: 20px solid rgb(0,100,250);
       padding: 50px;
       margin: 20px;
+      opacity: 0.9;
     }
   </style>
 </head>
